add .footer_top & .footer_bottom

--- a/index.html
+++ b/index.html
@@ -10,20 +10,38 @@
 <body>
     
     <header>
-        <nav>
-
+        <nav class="container">
+            NAV
         </nav>
         <div id="hero">
-            
+            <div class="container">
+                HERO
+            </div>
         </div>
     </header>
 
     <main>
-
+        <section class="container">
+            A
+        </section>
+        <section class="container">
+            B
+        </section>
+        <section class="container">
+            C
+        </section>
+        <section class="container">
+            D
+        </section>
     </main>
 
     <footer>
-
+        <div class="footer_top">
+            TOP
+        </div>
+        <div class="footer_bottom">
+            BOTTOM 
+        </div>
     </footer>
 
 </body>
