--- a/index.html
+++ b/index.html
@@ -21,25 +21,23 @@
     </header>
 
     <main>
-        <section class="container">
-            A
-        </section>
-        <section class="container">
-            B
-        </section>
-        <section class="container">
-            C
-        </section>
-        <section class="container">
-            D
+        <section>
+            <div class="container">A
+            </div>
+            <div class="container even">B
+            </div>
+            <div class="container">C
+            </div>
+            <div class="container even">D
+            </div>
         </section>
     </main>
 
     <footer>
-        <div class="footer_top">
+        <div class="footer_top container">
             TOP
         </div>
-        <div class="footer_bottom">
+        <div class="footer_bottom container">
             BOTTOM 
         </div>
     </footer>
