add logo (nav & footer_bottom)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     
     <header>
         <nav class="container">
-            NAV
+            <div class="logo">
+                <img src="./img/logo.svg" alt="Discord_Logo">
+            </div>
         </nav>
         <div id="hero">
             <div class="container">
@@ -34,25 +36,27 @@
     </main>
 
     <footer>
-        <div class="footer_top container">
-            <ul>
+        <div class="footer_top container d_flex">
+            <ul class="d_flex">
                 <li>A</li>
             </ul>
-            <ul>
+            <ul class="d_flex">
                 <li>B</li>
             </ul>
-            <ul>
+            <ul class="d_flex">
                 <li>C</li>
             </ul>
-            <ul>
+            <ul class="d_flex">
                 <li>D</li>
             </ul>
-            <ul>
+            <ul class="d_flex">
                 <li>E</li>
             </ul>
         </div>
-        <div class="footer_bottom container">
-            BOTTOM 
+        <div class="footer_bottom container d-flex">
+            <div class="logo">
+                <img src="./img/logo.svg" alt="Discord_Logo">
+            </div>
         </div>
     </footer>
 
