add nav elements

--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
 <body>
     
     <header>
-        <nav class="container">
+        <nav class="container d_flex">
             <div class="logo">
                 <img src="./img/logo.svg" alt="Discord_Logo">
             </div>
+            <ul class="d_flex list_style">
+                <li>A</li>
+            </ul>
+            <ul class="d_flex list_style">
+                <li>B</li>
+            </ul>
+            <ul class="d_flex list_style">
+                <li>C</li>
+            </ul>
+            <ul class="d_flex list_style">
+                <li>D</li>
+            </ul>
+            <ul class="d_flex list_style">
+                <li>E</li>
+            </ul>
+            <a href="#">BUTTON</a>
         </nav>
         <div id="hero">
             <div class="container">
@@ -37,19 +53,19 @@
 
     <footer>
         <div class="footer_top container d_flex">
-            <ul class="d_flex">
+            <ul class="d_flex list_style">
                 <li>A</li>
             </ul>
-            <ul class="d_flex">
+            <ul class="d_flex list_style">
                 <li>B</li>
             </ul>
-            <ul class="d_flex">
+            <ul class="d_flex list_style">
                 <li>C</li>
             </ul>
-            <ul class="d_flex">
+            <ul class="d_flex list_style">
                 <li>D</li>
             </ul>
-            <ul class="d_flex">
+            <ul class="d_flex list_style">
                 <li>E</li>
             </ul>
         </div>
