add .left & .right

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     
     <header>
-        <nav class="container d_flex">
-            <div class="logo">
+        <nav class="container d_flex align_center">
+            <div class="logo align_center">
                 <img src="./img/logo.svg" alt="Discord_Logo">
             </div>
-            <ul class="d_flex list_style">
+            <ul class="d_flex align_center list_style">
                 <li>A</li>
             </ul>
-            <ul class="d_flex list_style">
+            <ul class="d_flex align_center list_style">
                 <li>B</li>
             </ul>
-            <ul class="d_flex list_style">
+            <ul class="d_flex align_center list_style">
                 <li>C</li>
             </ul>
-            <ul class="d_flex list_style">
+            <ul class="d_flex align_center list_style">
                 <li>D</li>
             </ul>
-            <ul class="d_flex list_style">
+            <ul class="d_flex align_center list_style">
                 <li>E</li>
             </ul>
             <a href="#">BUTTON</a>
@@ -40,11 +40,17 @@
 
     <main>
         <section>
-            <div class="container">A
+            <div class="container d_flex">
+                <div class="left">A</div>
+                <div class="right">B</div>
             </div>
-            <div class="container even">B
+            <div class="container even d_flex">
+                <div class="left">A</div>
+                <div class="right">B</div>
             </div>
-            <div class="container">C
+            <div class="container d_flex">
+                <div class="left">A</div>
+                <div class="right">B</div>
             </div>
             <div class="container even">D
             </div>
