--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="left">A</div>
                 <div class="right">B</div>
             </div>
-            <div class="container even d_flex">
+            <div class="container even d_flex reverse">
                 <div class="left">A</div>
                 <div class="right">B</div>
             </div>
