add #hero background-image

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <a href="#">BUTTON</a>
         </nav>
         <div id="hero">
-            <div class="container">
-                HERO
-            </div>
+            <div class="container"></div>
         </div>
     </header>
 
