--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
                 <img src="./img/logo.svg" alt="Discord_Logo">
             </div>
             <ul class="d_flex align_center list_style">
-                <li>A</li>
+                <li><a class="text_decoration_a" href="#">Scarica</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li>B</li>
+                <li><a class="text_decoration_a" href="#">Perché Discord</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li>C</li>
+                <li><a class="text_decoration_a" href="#">Nitro</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li>D</li>
+                <li><a class="text_decoration_a" href="#">Sicurezza</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li>E</li>
+                <li><a class="text_decoration_a" href="#">Assistenza</a></li>
             </ul>
             <a href="#">BUTTON</a>
         </nav>
