--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <a href="#">BUTTON</a>
         </nav>
         <div id="hero">
-            <div class="container"></div>
+            <div class="container">
+                <h1>Il tuo posto per parlare</h1>
+            </div>
         </div>
     </header>
 
