--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
                 <img src="./img/logo.svg" alt="Discord_Logo">
             </div>
             <ul class="d_flex align_center list_style">
-                <li><a class="text_decoration_a" href="#">Scarica</a></li>
+                <li><a class="text_decoration" href="#">Scarica</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li><a class="text_decoration_a" href="#">Perché Discord</a></li>
+                <li><a class="text_decoration" href="#">Perché Discord</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li><a class="text_decoration_a" href="#">Nitro</a></li>
+                <li><a class="text_decoration" href="#">Nitro</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li><a class="text_decoration_a" href="#">Sicurezza</a></li>
+                <li><a class="text_decoration" href="#">Sicurezza</a></li>
             </ul>
             <ul class="d_flex align_center list_style">
-                <li><a class="text_decoration_a" href="#">Assistenza</a></li>
+                <li><a class="text_decoration" href="#">Assistenza</a></li>
             </ul>
-            <a href="#">BUTTON</a>
+            <button class="btn" type="button"><a class="text_decoration white_btn" href="#">Accedi</a></button>
         </nav>
         <div id="hero">
             <div class="container">
