modify nav button

--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
             <ul class="d_flex align_center list_style">
                 <li><a class="text_decoration" href="#">Assistenza</a></li>
             </ul>
-            <button class="btn" type="button"><a class="text_decoration white_btn" href="#">Accedi</a></button>
+            <button class="btn white_btn" type="button">
+                <a href="#">Accedi</a>
+            </button>
         </nav>
         <div id="hero">
             <div class="container">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,<br>
                     o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br>
-                    Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                </p>
+                <button type="button"></button>
             </div>
         </div>
     </header>
