modify nav img_logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
         <nav class="container d_flex align_center">
             <div class="logo align_center">
-                <img src="./img/logo.svg" alt="Discord_Logo">
+                <a href="#">
+                    <img src="./img/logo.svg" alt="Discord_Logo">
+                </a>
             </div>
             <ul class="d_flex align_center list_style">
                 <li><a class="text_decoration" href="#">Scarica</a></li>
