add nav button:hover

--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
 
     <main>
         <section>
-            <div class="container d_flex">
+            <div class="container d_flex debug">
                 <div class="left">A</div>
                 <div class="right">B</div>
             </div>
-            <div class="container even d_flex reverse">
+            <div class="container even d_flex reverse debug">
                 <div class="left">A</div>
                 <div class="right">B</div>
             </div>
-            <div class="container d_flex">
+            <div class="container d_flex debug">
                 <div class="left">A</div>
                 <div class="right">B</div>
             </div>
-            <div class="container even">D
+            <div class="container even debug">D
             </div>
         </section>
     </main>
 
     <footer>
-        <div class="footer_top container d_flex">
+        <div class="footer_top container d_flex debug">
             <ul class="d_flex list_style">
                 <li>A</li>
             </ul>
@@ -87,7 +87,7 @@
                 <li>E</li>
             </ul>
         </div>
-        <div class="footer_bottom container d-flex">
+        <div class="footer_bottom container d-flex debug">
             <div class="logo">
                 <img src="./img/logo.svg" alt="Discord_Logo">
             </div>
