add #hero button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
                     o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br>
                     Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
-                <button type="button"></button>
+                <div class="button_hero">
+                    <button class="btn button_white" type="button">
+                        <span id="down_arrow">&#129067;</span><a class="button_white" href="#">Scarica per Mac</a>
+                    </button>
+                    <button class="btn button_dark" type="button">
+                        <a class="button_dark" href="#">Apri Discord nel tuo browser</a>
+                    </button>
+                </div>
             </div>
         </div>
     </header>
