modify section to div

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <main>
-        <section>
+        <div>
             <div class="container d_flex debug">
                 <div class="left">A</div>
                 <div class="right">B</div>
@@ -73,7 +73,7 @@
             </div>
             <div class="container even debug">D
             </div>
-        </section>
+        </div>
     </main>
 
     <footer>
